--- a/st_normalize/_language-and-currency-selectors.styl
+++ b/st_normalize/_language-and-currency-selectors.styl
@@ -4,12 +4,11 @@
   
 
 .language-selector, .currency-selector
-  padding 12px 6px 12px 0px !important
+  padding 12px 6px 12px 0px
   font-size textoP
   display inline-block
   position relative
   color texto-blanco
-  padding small-padding
   background-color background-color
   cursor pointer
   z-index 100
