--- a/st_normalize/dev.styl
+++ b/st_normalize/dev.styl
@@ -27,6 +27,10 @@ breakpoint-small  = 1000px
 breakpoint-medium = 1200px
 breakpoint-large  = 1800px
 
+//Tipos
+@import url('https://fonts.googleapis.com/css?family=Lato');
+menu = Lato
+
 @import "_normalize.styl"
 @import "_mixins.styl"
 @import "_common.styl"
